# public/docs/openapi.yaml
@@ -9,16 +9,9 @@ servers:
 paths:
   /api/v1:
     get:
-      summary: ''
+      summary: Home
       description: ''
       parameters:
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
-          schema:
-            type: string
         -
           in: header
           name: Content-Type
@@ -40,21 +33,15 @@ paths:
             text/plain:
               schema:
                 type: string
-                example: 'Welcome to '
+                example: 'Welcome to ProductService'
       tags:
         - Endpoints
+      security: []
   /api/v1/auth:
     post:
-      summary: 'Log in the user.'
+      summary: 'Authenticating the user.'
       description: ''
       parameters:
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
-          schema:
-            type: string
         -
           in: header
           name: Content-Type
@@ -120,42 +107,7 @@ paths:
               required:
                 - email
                 - password
-  /api/v2:
-    get:
-      summary: ''
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
-          schema:
-            type: string
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: application/json
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses:
-        200:
-          description: ''
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: 'Welcome to '
-      tags:
-        - Endpoints
+      security: []
   /api/v1/products:
     get:
       summary: 'Get All Products.'
@@ -165,7 +117,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -201,7 +153,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -237,7 +189,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -272,7 +224,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -292,6 +244,19 @@ paths:
       responses: {  }
       tags:
         - 'User Management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_sku:
+                  type: string
+                  description: 'Products Sku.'
+                  example: kontakt-4
+              required:
+                - product_sku
   '/api/v1/user/products/{sku}':
     put:
       summary: 'Update Users Purchase.'
@@ -301,7 +266,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -321,6 +286,19 @@ paths:
       responses: {  }
       tags:
         - 'User Management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_sku:
+                  type: string
+                  description: 'Products Sku.'
+                  example: kontakt-4
+              required:
+                - product_sku
     patch:
       summary: 'Update Users Purchase.'
       description: ''
@@ -329,7 +307,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -349,6 +327,19 @@ paths:
       responses: {  }
       tags:
         - 'User Management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_sku:
+                  type: string
+                  description: 'Products Sku.'
+                  example: kontakt-4
+              required:
+                - product_sku
     delete:
       summary: 'Delete Users Purchase.'
       description: ''
@@ -357,7 +348,7 @@ paths:
           in: header
           name: Authorization
           description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
+          example: '{YOUR_AUTH_KEY}'
           schema:
             type: string
         -
@@ -382,15 +373,16 @@ paths:
         in: path
         name: sku
         description: ''
-        example: quo
+        example: ad
         required: true
         schema:
           type: string
 components:
   securitySchemes:
     default:
-      type: http
-      scheme: bearer
+      type: apiKey
+      name: Authorization
+      in: header
       description: ''
 security:
   -
